# QDAP

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.0f287c2  QDAP_zh_CN.ts  README.md  comp_testing.md  main.qrc  vendor.py
resources/: io.github.ma6254.qdap.desktop
src/: chip_selecter.cpp  chip_selecter.h  chip_selecter.ui  config.cpp  config.h  dap_hid.cpp  dap_hid.h  enum_writer_list.cpp  enum_writer_list.h  enum_writer_list.ui  flash_algo.cpp  flash_algo.h  glibc_elf.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  program_worker.cpp  program_worker.h  utils.cpp  utils.h
src/DAP/: debug_cm.h
src/components/: config.cpp  config.h  hex_viewer.cpp  hex_viewer.h  hex_viewer.ui
src/config/: chips_config.cpp  chips_config.h  config.cpp  config.h
src/device_selector/: enum_dap.cpp  enum_writer_list.cpp  enum_writer_list.h
src/devices/: dap.cpp  dap.h  dap_usb_bulk.cpp  dap_usb_bulk.h  dap_usb_hid.cpp  dap_usb_hid.h  device_list.cpp  device_list.h  devices.cpp  devices.h
src/devices/cmsis-dap/: dap.cpp  dap.h  dap_usb_bulk.cpp  dap_usb_bulk.h  dap_usb_hid.cpp  dap_usb_hid.h
src/ui_components/: chip_selecter.cpp  chip_selecter.h  chip_selecter.ui  dialog_chips_config.cpp  dialog_chips_config.h  dialog_chips_config.ui  enum_dap.cpp  enum_dap.h  enum_dap.ui  hex_viewer.h  hex_viewer.ui
src/views/chips_config_dialog/: chips_config_dialog.cpp  chips_config_dialog.h  chips_config_dialog.ui
src/views/device_selector/: enum_writer_list.cpp
src/views/device_selector/cmsis-dap/: enum_dap.h
src/views/input_box_dialog/: input_box_dialog.cpp  input_box_dialog.h  input_box_dialog.ui
src/win_hotplug_notify/: win_hotplug_notify.cpp  win_hotplug_notify.h
